syntax = "proto3";
package oneflow;

message Machine {
  string addr = 1; // domain name or ip
  string port = 2;
}

enum DeviceType {
  kCPU = 0;
  kGPU = 1;
}

message Resource {
  repeated Machine machines = 1;
  int32 device_num_per_machine = 2;
  DeviceType device_type = 3;
}
